vlib/v/checker/tests/return_optional_err.vv
import os

fn my_func() string {
  return os.read_file('/some/file/that/exists.txt') or {panic(err)}
}

fn main() {
	aa := my_func()
	println(aa)
}
